layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ body {
 #game-container{ 
 	margin-bottom:50px; 
 	float:left;
-	width: 800px;
+	width: 600px;
 }
 
 .remove-user{
